test/elaboration/bad/typeclass_unbound_type_parameter.mle
class H 'a { h : 'b -> int }